content/kubernetes/configuration/argo/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable
spec:
  ingressClassName: nginx
  rules:
    - host: stable.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
spec:
  ingressClassName: nginx
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary
                port:
                  name: http
